env package-json

--- a/generators/flowrty-mfe/template/package.hbs
+++ b/generators/flowrty-mfe/template/package.hbs
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-cli serve",
     "build": "webpack --mode production",
-    "generate:env": "cp .env-template .env"
+    "generate:env": "cp .env.example .env"
   },
   "keywords": [
     "flowrty"
