--- a/generators/flowrty-mfe/template/webpack.config.hbs
+++ b/generators/flowrty-mfe/template/webpack.config.hbs
@@ -79,7 +79,8 @@ module.exports = {
           import: 'react',
           shareKey: 'react',
           shareScope: 'default',
-          singleton: true
+          singleton: true,
+          requiredVersion: deps['react']
         },
         'react-dom': {
           singleton: true,
