--- a/generators/flowrty-mfe/template/package.hbs
+++ b/generators/flowrty-mfe/template/package.hbs
@@ -20,6 +20,7 @@
     "chalk": "^4.1.2",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
+    "dotenv-webpack": "^8.0.0",
     "eslint": "^8.19.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
