--- a/generators/flowrty-mfe/template/webpack.config.hbs
+++ b/generators/flowrty-mfe/template/webpack.config.hbs
@@ -1,6 +1,7 @@
 const HtmlWebpackPlugin = require('html-webpack-plugin')
 const ModuleFederationPlugin = require('webpack').container.ModuleFederationPlugin
 const ESLintPlugin = require('eslint-webpack-plugin')
+const Dotenv = require('dotenv-webpack')
 
 const dotenv = require('dotenv')
 const chalk = require('chalk')
@@ -64,6 +65,9 @@ module.exports = {
     ]
   },
   plugins: [
+    new Dotenv({
+      ...env
+    }),
     new ESLintPlugin(),
     new ModuleFederationPlugin({
       name: dotenv.APP_NAME || '{{ mfeName }}',
