--- a/generators/flowrty-mfe/template/package.hbs
+++ b/generators/flowrty-mfe/template/package.hbs
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "dotenv-webpack": "^8.0.0",
